# ValidFrame

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/vframe/: _column_types_validation.py  _column_validation.py  basemodel.py  column_types.py  error.py
src/vrame/: _column_types_validation.py  _column_validation.py  basemodel.py  column_types.py  error.py
tests/: unit_tests_column_types_validation.py  unit_tests_column_validation.py
vrame/: _column_types_validation.py  _column_validation.py  basemodel.py  column_types.py  error.py
